[package]
name = "kanten_logs"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossterm = "0.20"
anyhow = "1.0.42"
unicode-width = "0.1"
unicode-segmentation = "1.7.1"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-config" }
cloudwatchlogs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-cloudwatchlogs" }
tokio = { version = "1", features = ["full", "macros"] }
log = "0.4"
simplelog = { version = "0.10", default-features = false }
dirs-next = "2.0"
chrono = "0.4"
lru = "0.6.6"
structopt = "0.3"
humantime = "2.1.0"
regex = "1"
# serde_json = "1.0"
# serde = "1.0"
# toml = "0.4"
# strum = "0.21"
# strum_macros = "0.21"
async-trait = "0.1.50"
rand = "0.8"

